<resources>
    <string name="app_name">Service_client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_on">Register</string>
    <string name="forget_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="back">Back</string>
    <string name="username_error">Username must not be empty</string>
    <string name="password_error">Password must not be empty</string>
    <string name="restore_password">Restore Password</string>
    <string name="account">Account</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="personal_data">Personal Data</string>
    <string name="invalid_password2">Passwords must be the same</string>
    <string name="logout">Logout</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="user_username">Username</string>
    <string name="user_password">Password</string>
    <string name="dialog_success_title">Success</string>
    <string name="dialog_success_message">Your password has been changed. Please check your mailbox.</string>
    <string name="dialog_success_message_password">Your password has been changed.</string>
    <string name="dialog_success_message_personal">Your personal data has been changed.</string>
    <string name="dialog_success_message_email">Your email has been changed.</string>
    <string name="dialog_failure_message_password">Your password has not been changed. Current password is incorrect.</string>
    <string name="dialog_failure_message_personal">Your personal data has not been changed. Something went wrong.</string>
    <string name="dialog_failure_message_email">Your email has not been changed. Current email is incorrect.</string>
    <string name="dialog_failure_title">Failure</string>
    <string name="dialog_failure_message">We could not find your email. Please check it again.</string>
    <string name="dialog_failure_login_message">Username or password is incorrect.</string>
    <string name="dialog_success_registration_message">Your account has been created. Please check your mailbox in order to verify it.</string>
    <string name="dialog_failure_registration_message">Your account has not been created. Please use other username and/or email.</string>
    <string name="menu_personal">Personal Data</string>
    <string name="menu_update_password">Update Password</string>
    <string name="menu_update_email">Update Email</string>
    <string name="messages">Messages</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm">Confirm</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="filter">Filter</string>
    <string name="distance"> km away from you.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_maximum_distance">Select maximum distance</string>
    <string name="select_category">Select Category</string>
    <string name="search_by_name_or_service">Search by name or service</string>
    <string name="title_activity_maps">Map</string>
    <string name="see_opinions_of_this_service">See opinions of this service</string>
    <string name="pick_dates">Pick Dates</string>
    <string name="check_availability">Check availability</string>
    <string name="opinions">Opinions</string>
    <string name="send_message">Send message</string>
    <string name="orders_history">Orders history</string>
    <string name="your_orders">Your Orders</string>
    <string name="add_your_comment_about_order">Add your comment about order</string>
    <string name="cancel">Cancel</string>
</resources>
