<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orders_history" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/messages"/>
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_update_email"
                android:icon="@drawable/email"
                android:title="@string/update_email" />
            <item
                android:id="@+id/nav_update_password"
                android:icon="@drawable/password"
                android:title="@string/update_password" />
            <item
                android:id="@+id/nav_personal_data"
                android:icon="@drawable/personal_data"
                android:title="@string/personal_data" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>


        </menu>
    </item>

</menu>
